--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           persist-credentials: false
 
-      - name: Install and Build 
+      - name: Install and Build
         run: |
           yarn install
           yarn run build
@@ -23,4 +23,4 @@ jobs:
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: gh-pages # The branch the action should deploy to.
-          FOLDER: ./build
+          FOLDER: ./dist
